添加project2部分样式

--- a/project/project2-blog/blog.html
+++ b/project/project2-blog/blog.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>“华丽的冒险”之美国西部游——day 4</title>
+	<link rel="stylesheet" href="http://coding.imweb.io/demo/reset.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="page-detail">
